<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="top"
    android:padding="16dp"
    tools:context=".RegisterActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Company"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:textSize="30sp"
            android:padding="18dp"
            android:id="@+id/company_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/NewUserName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="text"
            android:id="@+id/new_username_input"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/NewUserPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="textPassword"
            android:id="@+id/new_password_input"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/NewUserEmail"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="textEmailAddress"
            android:id="@+id/email_input"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/NewUserPhone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="phone"
            android:id="@+id/phone_number_input"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/NewUserSuper"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="text"
            android:id="@+id/supervisor_input"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/NewUserLocation"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="text"
            android:id="@+id/location_input"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NewUser"
            android:backgroundTint="@color/material_dynamic_secondary80"
            android:textColor="@color/black"
            android:padding="1dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:id="@+id/create_user_btn"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BackToLogin"
            android:backgroundTint="@color/material_dynamic_secondary80"
            android:textColor="@color/black"
            android:padding="1dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:id="@+id/back_to_log_btn"
            />

    </LinearLayout>
</ScrollView>


</RelativeLayout>