<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".NotificationActivity">

    <TextView
        android:id="@+id/notification_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/Checking"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_number_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:hint="@string/NewUserPhone"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner"
        android:textColorHint="@color/white"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/notification_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- ToggleButton for SMS Permission -->
    <Switch
        android:id="@+id/sms_permission_toggle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="Enable SMS Notifications"
        android:textColor="@color/white"
        android:checked="false"
        app:layout_constraintTop_toBottomOf="@id/phone_number_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/request_permission_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Grant"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_text" />

</androidx.constraintlayout.widget.ConstraintLayout>